crates/wac-parser/tests/resolution/fail/mismatched-option/foo/bar.wat
(component
  (instance (import "x")
    (export "f" (func (param "o" (option string))))
  )
)
